tests/sksl/errors/SwitchDuplicateVariable.glsl
### Compilation failed:

error: 4: symbol 'x' was already defined
        case 2: int x, x;
                       ^
error: 4: symbol 'x' was already defined
        case 2: int x, x;
                       ^
2 errors
